--- a/Survey-Creater-view/survey-creater/src/style/uFrame.css
+++ b/Survey-Creater-view/survey-creater/src/style/uFrame.css
@@ -17,7 +17,7 @@ transition: box-shadow 0.5s;
 }
 
 .routerActive{
-    box-shadow:0px 0px 5px 3px #FF0000;
+    box-shadow:0px 0px 5px 3px #67e5ea;
 } 
 
 .userDiv {
