--- a/Survey-Creater-view/survey-creater/src/style/user/result.css
+++ b/Survey-Creater-view/survey-creater/src/style/user/result.css
@@ -1,7 +1,6 @@
     .resultDiv {
         text-align: center;
-        margin-top: 150px; 
-        
+        padding-top: 150px; 
     }
 
     .pagination {
