--- a/Survey-Creater-view/survey-creater/src/style/user/main.css
+++ b/Survey-Creater-view/survey-creater/src/style/user/main.css
@@ -30,3 +30,54 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
         background-color: #ccc7d4;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='126' height='84' viewBox='0 0 126 84'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23bbe1ec' fill-opacity='0.78'%3E%3Cpath d='M126 83v1H0v-2h40V42H0v-2h40V0h2v40h40V0h2v40h40V0h2v83zm-2-1V42H84v40h40zM82 42H42v40h40V42zm-50-6a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM8 12a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm96 12a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm-42 0a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm30-12a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM20 54a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm12 24a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM8 54a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm24 0a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM8 78a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm12 0a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm54 0a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM50 54a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm24 0a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM50 78a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm54-12a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm12 12a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM92 54a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm24 0a4 4 0 1 1 0-8 4 4 0 0 1 0 8zM92 78a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm24-42a4 4 0 1 1 0-8 4 4 0 0 1 0 8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); */
     }
+
+        .slide {
+    color: #fff;
+    height: 350px;
+    position: relative;
+}
+
+    .slide--1 {
+        background-image: url(http://ww1.sinaimg.cn/large/006azB5Sly1g0z6nc6nzxj31gr0a9q3b.jpg);  
+    }
+
+    .slide--2 {
+        background-image: url(http://ww1.sinaimg.cn/large/006azB5Sly1g0z6wchoiaj31ha097dfq.jpg);  
+    }
+
+    .slide--3 {
+        background-image: url(http://ww1.sinaimg.cn/large/006azB5Sly1g0z6xb2zo4j31h80c8gnh.jpg);
+    }
+
+    .slide--4 {
+        background-image: url(http://ww1.sinaimg.cn/large/006azB5Sly1g0z6xzgpoij31gq0bzacw.jpg);   
+    }
+
+    .slide--5 {
+        background-image: url(http://ww1.sinaimg.cn/large/006azB5Sly1g0z6yr26x9j31h80h50x9.jpg); 
+    }
+
+    .slide--6 {
+        background-color: #44e865;    
+    }
+
+    h3 {
+        color: #f28218;
+        text-shadow: 8px 4px 5px #000;
+        font-size: 32px;
+        font-weight: 300;
+        left: 50%;
+        margin: 0;
+        position: absolute;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    .v-slide{
+        margin:100px auto; 
+    }
+
+    .MyContainer {
+
+    }
+
